Prevented flickering of the tabs.

--- a/stylesheets/components/_hex-tabs.scss
+++ b/stylesheets/components/_hex-tabs.scss
@@ -9,6 +9,7 @@
   ul {
     margin: 0;
     padding: 0;
+    height: 245px;
 
     li {
       position: relative;
